--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".edu_space.default_app.activity.DefaultMessageChattingActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" /> <!-- 교육공간 -->
         <activity
@@ -26,8 +35,7 @@
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="false"/> <!-- 메인화면 -->
-
+            android:exported="false" /> <!-- 메인화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageActivity"
             android:exported="false" />
@@ -79,20 +87,16 @@
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraActivity"
             android:exported="false" /> <!-- 카메라 -->
-
         <!-- 환경설정2 -->
         <activity
             android:name=".edu_space.settingedu2.Setting2MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2DisplayActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2FontActivity"
-            android:exported="false">
-        </activity>
-
-        <!-- 계정생성 교육 -->
+            android:exported="false"></activity> <!-- 계정생성 교육 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
@@ -126,11 +130,10 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.appinstall.installMainActivity"
-            android:exported="false" />
-        <!-- 카카오톡 -->
+            android:exported="false" /> <!-- 카카오톡 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
             android:exported="false" />
@@ -142,12 +145,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity> <!-- 코레일 -->
         <!-- 이 부분 아래에 넣어주세요 -->
         <activity
@@ -161,8 +159,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.ticket.TpayActivity"
-            android:exported="false" />
-        <!-- 카카오 택시 -->
+            android:exported="false" /> <!-- 카카오 택시 -->
         <activity
             android:name=".edu_space.kakaotaxi.TaxiMainActivity"
             android:exported="false" />
@@ -177,8 +174,7 @@
             android:exported="false" /> <!-- 배달의 민족 -->
         <activity
             android:name=".edu_space.delivery.DlvMainActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".edu_space.delivery.shopActivity"
             android:exported="false" />
@@ -187,8 +183,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.delivery.foodmenuActivity"
-            android:exported="false" />
-        <!-- TODO : 수진 - backend TEST -->
+            android:exported="false" /> <!-- TODO : 수진 - backend TEST -->
         <activity
             android:name=".backend.BackendTest"
             android:exported="false" />
