--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,61 +15,58 @@
         android:theme="@style/Theme.Synergy"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
             android:name=".edu_space.default_app.activity.DefaultMessageChattingActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" /> <!-- 메시지 채팅 화면 -->
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
-            android:exported="false" /> <!-- 교육공간 -->
+            android:exported="false" /> <!-- 네이버 검색 결과 화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultAppActivity"
-            android:exported="false" />
+            android:exported="false" /> <!-- 기본 앱 화면 -->
         <activity
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="false" /> <!-- 메인화면 -->
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".EduSpaceActivity"
-            android:exported="false" /> <!-- 삭제할거 -->
-        <!-- 아이콘 교육 -->
-        <activity
-            android:name=".edu_space.icon_edu.activity.IconEduActivity"
-            android:exported="false" /> <!-- 아이콘 첫화면 -->
-        <activity
-            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-            android:exported="false" /> <!-- 아이콘 설명 -->
-        <!-- 화면구성 -->
-
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduActivity"
-            android:exported="false" />
-
-        <!-- 기본앱 활용 -->
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> <!-- 메인 화면 -->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
+            android:exported="false" /> <!-- 메시지 화면 -->
+        <activity
+            android:name=".EduSpaceActivity"
+            android:exported="false" /> <!-- 삭제할 거 -->
+        <!-- 아이콘 교육 -->
+        <activity
+            android:name=".edu_space.icon_edu.activity.IconEduActivity"
+            android:exported="false" /> <!-- 아이콘 첫 화면 -->
+        <activity
+            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
+            android:exported="false" /> <!-- 아이콘 설명 -->
+        <!-- 화면구성 -->
+        <activity
+            android:name=".edu_space.screenEdu.activity.ScreenEduActivity"
+            android:exported="false" />
+        <!-- 기본앱 활용 -->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
+            android:exported="false" /> <!-- 전화 화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
-            android:exported="false" /> <!-- 전화 -->
+            android:exported="false" /> <!-- 전화 콜 화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraActivity"
-            android:exported="false">
-        </activity> <!-- 카메라 -->
+            android:exported="false" /> <!-- 카메라 화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultCameraGalleryViewActivity"
-            android:exported="false"/>
+            android:exported="false"/> <!-- 카메라 갤러리 뷰 화면 -->
         <!-- 환경설정2 -->
         <activity
             android:name=".edu_space.settingedu2.Setting2MainActivity"
@@ -106,30 +103,30 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.accountedu.GoogleMailAddActivity"
-            android:exported="false" /> <!-- 앱 설치 -->
+            android:exported="false" />
         <!-- 이 부분 아래에 넣어주세요 -->
         <activity
             android:name=".edu_space.appinstall.installActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.appinstall.installMainActivity"
-            android:exported="false" /> <!-- 카카오톡 -->
+            android:exported="false" /> <!-- 앱 설치 메인 화면 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="false" />
+            android:exported="false" /> <!-- 카카오톡 메인 화면 -->
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.kakaotalk.activity.KakaoChattingActivity"
-            android:exported="false" /> <!-- 네이버 -->
-        <activity
-            android:name=".edu_space.naver.activity.NaverSearchActivity"
             android:exported="false" />
         <activity
+            android:name=".edu_space.naver.activity.NaverSearchActivity"
+            android:exported="false" /> <!-- 네이버 검색 화면 -->
+        <activity
             android:name=".edu_space.naver.activity.NaverActivity"
-            android:exported="false">
-        </activity> <!-- 코레일 -->
+            android:exported="false"> <!-- 네이버 화면 -->
+        </activity>
         <!-- 이 부분 아래에 넣어주세요 -->
         <activity
             android:name=".edu_space.ticket.TicketMainActivity"
