--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,143 +13,150 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Synergy"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultMessageChattingActivity"
+            android:exported="false">
+        </activity> <!-- 메시지 채팅 화면 -->
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
-            android:exported="false" />
-        <!-- 교육공간 -->
+            android:exported="false" /> <!-- 네이버 검색 결과 화면 -->
         <activity
             android:name=".edu_space.default_app.activity.DefaultAppActivity"
-            android:exported="false"></activity>
+            android:exported="false" /> <!-- 기본 앱 화면 -->
         <activity
             android:name=".main.activity.DigitalStartActivity"
             android:exported="false" /> <!-- 디지털 나이 검사 -->
         <activity
             android:name=".MainActivity"
-            android:exported="false"> <!-- 메인화면 -->
-        </activity>
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".EduSpaceActivity"
-            android:exported="false" /> <!-- 삭제할거 -->
-        <!-- 아이콘 교육 -->
-        <activity
-            android:name=".edu_space.icon_edu.activity.IconEduActivity"
-            android:exported="false" /> <!-- 아이콘 첫화면 -->
-        <activity
-            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-            android:exported="false" /> <!-- 아이콘 설명 -->
-        <!-- 화면구성 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduMainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduToolActivity"
-            android:exported="false" /> <!-- 상단바 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduLeftToolActivity"
-            android:exported="false" /> <!-- 상단바 왼쪽 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduRightToolActivity"
-            android:exported="false" /> <!-- 상단바 오른쪽 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduBottomActivity"
-            android:exported="false" /> <!-- 하단바 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduLeftBottomActivity"
-            android:exported="false" /> <!-- 하단바 왼쪽 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduCenterBottomActivity"
-            android:exported="false" /> <!-- 하단바 가운데 -->
-        <activity
-            android:name=".edu_space.screenEdu.activity.ScreenEduRightBottomActivity"
-            android:exported="false" /> <!-- 하단바 오른쪽 -->
-        <!-- 기본앱 활용 -->
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
-            android:exported="false"></activity>
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
-            android:exported="false"> <!-- 전화 -->
-        </activity>
-        <activity
-            android:name=".edu_space.default_app.activity.DefaultCameraActivity"
-            android:exported="false" /> <!-- 카메라 -->
-        <!-- 환경설정 -->
-        <activity
-            android:name=".edu_space.settingedu.activity.SettingEduActivity"
-            android:exported="true"></activity> <!-- 환경설정 시작 -->
-        <activity
-            android:name=".edu_space.settingedu.activity.SettingDetailActivity"
-            android:exported="false" /> <!-- 화면 밝기 -->
-        <activity
-            android:name=".edu_space.settingedu.activity.SettingFontSizeActivity"
-            android:exported="false" /> <!-- 글씨 크기 -->
-        <activity
-            android:name=".edu_space.settingedu.activity.SettingDisplayActivity"
-            android:exported="false" /> <!-- 화면 디스플레이 -->
-        <!-- 계정생성 교육 -->
-        <activity
-            android:name=".edu_space.accountedu.GoogleMainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.accountedu.GoogleLoginActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".edu_space.accountedu.GoogleMakeActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".edu_space.accountedu.GoogleDefaultInfoActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".edu_space.accountedu.GoogleMailActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".edu_space.accountedu.GooglePasswordActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".edu_space.accountedu.GoogleGetCodeActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".edu_space.accountedu.GooglePutCodeActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".edu_space.accountedu.GoogleMailAddActivity"
-            android:exported="false"/>
-        <!-- 앱 설치 -->
-        <!-- 이 부분 아래에 넣어주세요 -->
-        <!-- 카카오톡 -->
-        <activity
-            android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".edu_space.kakaotalk.activity.KakaoChattingActivity"
-            android:exported="false" /> <!-- 네이버 -->
-        <activity
-            android:name=".edu_space.naver.activity.NaverSearchActivity"
-            android:exported="false"></activity>
-        <activity
-            android:name=".edu_space.naver.activity.NaverActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- 코레일 -->
+        </activity> <!-- 메인 화면 -->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultMessageActivity"
+            android:exported="false">
+        </activity> <!-- 메시지 화면 -->
+        <activity
+            android:name=".EduSpaceActivity"
+            android:exported="false" /> <!-- 삭제할 거 -->
+        <!-- 아이콘 교육 -->
+        <activity
+            android:name=".edu_space.icon_edu.activity.IconEduActivity"
+            android:exported="true"> <!-- 아이콘 첫 화면 -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".edu_space.icon_edu.activity.IconDetailActivity"
+            android:exported="false" /> <!-- 아이콘 설명 -->
+        <!-- 화면구성 -->
+        <activity
+            android:name=".edu_space.screen_layout.ScreenLayoutActivity"
+            android:exported="false" />
+        <!-- 기본앱 활용 -->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultPhoneActivity"
+            android:exported="false">
+        </activity> <!-- 전화 화면 -->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultPhoneCallActivity"
+            android:exported="false" /> <!-- 전화 콜 화면 -->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultCameraActivity"
+            android:exported="false">
+        </activity> <!-- 카메라 화면 -->
+        <activity
+            android:name=".edu_space.default_app.activity.DefaultCameraGalleryViewActivity"
+            android:exported="false"/> <!-- 카메라 갤러리 뷰 화면 -->
+        <!-- 환경설정2 -->
+        <activity
+            android:name=".edu_space.settingedu2.Setting2MainActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".edu_space.settingedu2.Setting2DisplayActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.settingedu2.Setting2FontActivity"
+            android:exported="false" /> <!-- 계정생성 교육 -->
+        <activity
+            android:name=".edu_space.accountedu.GoogleMainActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".edu_space.accountedu.GoogleLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.accountedu.GoogleMakeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.accountedu.GoogleDefaultInfoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.accountedu.GoogleMailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.accountedu.GooglePasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.accountedu.GoogleGetCodeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.accountedu.GooglePutCodeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.accountedu.GoogleMailAddActivity"
+            android:exported="false" />
         <!-- 이 부분 아래에 넣어주세요 -->
-        <!-- 카카오 택시 -->
+        <activity
+            android:name=".edu_space.appinstall.installActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.appinstall.installMainActivity"
+            android:exported="false" /> <!-- 앱 설치 메인 화면 -->
+        <activity
+            android:name=".edu_space.kakaotalk.activity.KakaoMainActivity"
+            android:exported="false">
+        </activity> <!-- 카카오톡 메인 화면 -->
+        <activity
+            android:name=".edu_space.kakaotalk.activity.KakaoProfileDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.kakaotalk.activity.KakaoChattingActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".edu_space.naver.activity.NaverSearchActivity"
+            android:exported="false" /> <!-- 네이버 검색 화면 -->
+        <activity
+            android:name=".edu_space.naver.activity.NaverActivity"
+            android:exported="false"> <!-- 네이버 화면 -->
+        </activity>
+        <!-- 이 부분 아래에 넣어주세요 -->
+        <activity
+            android:name=".edu_space.ticket.TicketMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.ticket.resActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.ticket.Ticket2MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.ticket.TpayActivity"
+            android:exported="false" /> <!-- 카카오 택시 -->
         <activity
             android:name=".edu_space.kakaotaxi.TaxiMainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".edu_space.kakaotaxi.mapActivity"
             android:exported="false" />
@@ -164,6 +171,15 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.delivery.shopActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.delivery.payDActivity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.delivery.foodmenuActivity"
+            android:exported="false" /> <!-- TODO : 수진 - backend TEST -->
+        <activity
+            android:name=".backend.BackendTest"
             android:exported="false" />
     </application>
 
